src/styles/components/CalculatorIO.scss
@use "./Keypad.scss";

.calculation-display {
  z-index: -1;
  color: var(--col-window-bg);
  background-color: var(--col-white, white);
  box-shadow: 0 5px 3px var(--std-col-box-shadow);
  border-radius: 0.5rem;

  padding-inline: 0.75rem;
  padding-block: 0.5rem;

  display: grid;
  grid-template-columns: 1fr 5rem;

  .display {
    cursor: text;

    .top-display {
      padding: 0;
      margin: 0;
      min-height: 1.5em;
      font-weight: bold;
      word-break: break-all;
    }

    .interaction {
      position: relative;
      display: flex;
      gap: 0.5rem;
      overflow: hidden;

      p {
        font-family: "Bold";
        text-align: center;
        align-self: center;
      }

      input {
        z-index: 1;
        font-family: "FiraSans";
        color: var(--col-window-bg);
        background: none;
        border: none;
        width: 100%;

        font-size: 1.5rem;
        -webkit-tap-highlight-color: transparent;

        &:focus {
          outline: none;
        }

        &::placeholder {
          color: var(--col-window-bg);
          opacity: 0.5;
        }
      }

      .bracket-preview {
        position: absolute;

        color: var(--col-window-bg);
        border: none;
        background: none;

        top: 0;
        left: 0;
        width: 100%;

        font-size: 1.5rem;
        font-family: "FiraSans";
        opacity: 0.7;

        user-select: none;
        z-index: 0;
        white-space: pre;
        will-change: transform;
      }
    }
  }

  .submission-area,
  .submission-area>* {
    transition: background-color 0.5s ease-out;
  }

  .submission-area {
    display: grid;
    justify-content: center;
    align-items: center;

    border: none;
    border-radius: 1rem;
    background: var(--col-secondary);
    box-shadow: 3px 3px 3px hsla(0, 0%, 0%, 0.2);

    overflow: hidden;
    position: relative;

    &:active {
      box-shadow: inset 2px 1px rgba(0, 0, 0, 0.25);
    }

    .angle-unit {
      position: absolute;
      color: var(--col-white);
      background: var(--col-secondary);
      text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.25);

      top: 0;
      right: 1rem;
      font-size: 0.6rem;
      font-family: "ExtraLight";
    }

    .submit-icon {
      background: var(--col-secondary);
      color: var(--col-white, rgb(255, 255, 255));
      text-shadow: 1px 2px 1px rgba(0, 0, 0, 0.25);

      font-family: "FiraSans";
      font-size: 2rem;
    }
  }

  &.submitted {

    .submission-area,
    .submission-area>* {
      background: var(--col-accent);
      transition: background-color 0.5s ease-out;

      .submit-icon {
        font-size: 1.5rem;
        font-style: italic;
      }
    }
  }
}

